--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,40 @@
-.App {
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+.Search {
+  margin: 0 auto;
   text-align: center;
+  padding:10px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#a {
+  display:inherit;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.SQLsearch {
+    float:right;
 }
+#pageheader {
+  color:red;
+  font-size:36px;
+  text-align: center;
 
-.App-intro {
-  font-size: large;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#pageheader small {
+    color:orange;
+    font-size: 24px;
+}
+.SQLbuild {
+  float:left;
+}
+#customInput {
+  width:25em;
+}
+.dateRange {
+  display: inline-flex;
+  margin-top: 10px;
+  width: 100%;
+}
+#endDate {
+  margin-left:1.5em;
 }
