--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,18 @@
   padding:0;
   box-sizing: border-box;
 }
+body {
+  background-image:url("../TESI4254.jpg");
+  background-position: center;
+  background-size: cover;
+  opacity: .95;
+}
 .Search {
   margin: 0 auto;
   text-align: center;
   padding:10px;
+  z-index: 10;
+  background-color:white;
 }
 #a {
   display:inherit;
@@ -15,12 +23,16 @@
     float:right;
 }
 #pageheader {
-  color:red;
+  font-family: verdana, sans-serif;
+  color:black;
   font-size:36px;
   text-align: center;
+  z-index: 10;
+  background-color: white;
 
 }
 #pageheader small {
+    font-family: verdana, sans-serif;
     color:orange;
     font-size: 24px;
 }
